cs3700_lab02_bhtanji/cs3700_lab02/COMPILE_MINMAX_CPP_17259.log
minmax.cpp: In function ‘int main(int, char**)’:
minmax.cpp:74:23: error: ‘sum’ was not declared in this scope
              runTime, sum);
                       ^
-------------------------------------------------------
Primary job  terminated normally, but 1 process returned
a non-zero exit code.. Per user-direction, the job has been aborted.
-------------------------------------------------------
--------------------------------------------------------------------------
mpirun detected that one or more processes exited with non-zero status, thus causing
the job to be terminated. The first process to do so was:

  Process name: [[25660,1],0]
  Exit code:    1
--------------------------------------------------------------------------
